# omni-data-refinement

./: .gitignore  404.html  API_REFERENCE.md  LICENSE  README.md  demo.py  health_report.html  index.html  mkdocs.yml  my_report.html  my_report.json  my_report.md  objects.inv  omr_documentation.html  omr_report.html  omr_report.json  omr_report.md  pyproject.toml  sandbox.py
.github/workflows/: docs.yml
api/: index.html
docs/: api.md  examples.md  index.md
examples/: 01_summary.py  02_health.py  03_profile.py  04_clean.py  05_explain_changes.py  06_analyze.py  07_compare.py  08_explain.py  09_validate.py  10_versioning.py  11_report_and_export.py  12_monitoring.py  index.html
omr/: __init__.py  assistant.py  models.py  reporting.py  versioning.py
omr/cleaning/: engine.py  strategies.py
omr/core/: dataset.py  metadata.py
omr/drift/: engine.py
omr/engine/: ai_assistant.py  bias.py  cleaning.py  diagnostics.py  drift.py  leakage.py  outliers.py  profiling.py  quality.py  validation.py
omr/explainability/: engine.py
omr/health/: engine.py
omr/integrations/: polars.py
omr/monitoring/: monitor.py
omr/pipelines/: pipeline.py
omr/plugins/: registry.py
omr/profiling/: engine.py
omr/reports/: generator.py
omr/schemas/: types.py
omr/statistics/: engine.py
omr/utils/: formatting.py
omr/validation/: engine.py
omr/versioning/: system.py
search/: search_index.json
tests/: My_test.py  test_dataset.py
