[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omni-data-refinement"
version = "0.3.6"
description = "OMR: Omni Data Refinement - The standard framework for dataset quality, validation, and monitoring."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Omar Alshafai", email = "omar.alshafai@example.com" }
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
keywords = [
    "data quality",
    "data cleaning",
    "data validation",
    "drift detection",
    "machine learning",
    "data science"
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0"
]
stats = [
    "scipy>=1.10.0"
]

[project.urls]
Homepage = "https://github.com/Omar-Alshafai2/omni-data-refinement"
Documentation = "https://Omar-Alshafai2.github.io/omni-data-refinement/examples/"
Repository = "https://github.com/Omar-Alshafai2/omni-data-refinement.git"
Issues = "https://github.com/Omar-Alshafai2/omni-data-refinement/issues"

[tool.hatch.build.targets.wheel]
packages = ["omr"]
